put the nav bar code in the header and added sections with rows and lables for each  section of the web page

--- a/index.html
+++ b/index.html
@@ -25,21 +25,55 @@
 <body>
 
 	<header class="container-fluid">
+		<div id="navbar">
+			<a href="#home" class="hvr-sweep-to-bottom">Home</a>
+			<a href="#attractions" class="hvr-sweep-to-bottom">Tourist Attractions</a>
+			<a href="#accomidation" class="hvr-sweep-to-bottom">Accomadation</a>
+			<a href="#food" class="hvr-sweep-to-bottom">Eat and Drink</a>
+		</div>
 
 	</header>
 
 
-	<div id="navbar">
-		<a href="#home" class="hvr-sweep-to-bottom">Home</a>
-		<a href="#attractions" class="hvr-sweep-to-bottom">Tourist Attractions</a>
-		<a href="#accomidation" class="hvr-sweep-to-bottom">Accomadation</a>
-		<a href="#food" class="hvr-sweep-to-bottom">Eat and Drink</a>
-
-	</div>
-
-	<section class="container-fluid"></section>
 
 
+
+	<!-- google maps row  -->
+	<section class="container-fluid">
+		<div class="row">
+			<div class="col-md-4">
+
+			</div>
+		</div>
+	</section>
+
+	<!-- attractions row  -->
+	<section class="container-fluid">
+		<div class="row">
+			<div class="col-md-4">
+
+			</div>
+		</div>
+	</section>
+
+
+	<!-- accomodation row  -->
+	<section class="container-fluid">
+		<div class="row">
+			<div class="col-md-4">
+
+			</div>
+		</div>
+	</section>
+
+	<!-- food row  -->
+	<section class="container-fluid">
+		<div class="row">
+			<div class="col-md-4">
+
+			</div>
+		</div>
+	</section>
 
 
 
