added a maps.js page for the js code for the map

--- a/index.html
+++ b/index.html
@@ -24,24 +24,20 @@
 
 <body>
 
-	<header class="container-fluid">
+	<header>
 		<div id="navbar">
 			<a href="#home" class="hvr-sweep-to-bottom">Home</a>
 			<a href="#attractions" class="hvr-sweep-to-bottom">Tourist Attractions</a>
 			<a href="#accomidation" class="hvr-sweep-to-bottom">Accomadation</a>
 			<a href="#food" class="hvr-sweep-to-bottom">Eat and Drink</a>
 		</div>
-
 	</header>
-
-
-
 
 
 	<!-- google maps row  -->
 	<section class="container-fluid">
 		<div class="row">
-			<div class="col-md-4">
+			<div class="col-xs-12">
 
 			</div>
 		</div>
@@ -49,10 +45,10 @@
 
 	<!-- attractions row  -->
 	<section class="container-fluid">
-		<div class="row">
-			<div class="col-md-4">
+		<div class="row col-xs-12">
 
-			</div>
+
+		</div>
 		</div>
 	</section>
 
@@ -60,7 +56,7 @@
 	<!-- accomodation row  -->
 	<section class="container-fluid">
 		<div class="row">
-			<div class="col-md-4">
+			<div class="col-xs-12">
 
 			</div>
 		</div>
@@ -69,7 +65,7 @@
 	<!-- food row  -->
 	<section class="container-fluid">
 		<div class="row">
-			<div class="col-md-4">
+			<div class="col-xs-12">
 
 			</div>
 		</div>
@@ -82,7 +78,8 @@
 
 	</footer>
 
-
+<!-- API key AIzaSyCsmI5iuL3AjwGiUlX8nfm0twnNFzywJg0 -->
+	
 </body>
 
 </html>
