added the code on the style.css, map.js and index page to render the map through googles API on the page ina sperate div.

--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
 
 	<!-- google maps row  -->
 	<section class="container-fluid">
-		<div class="row">
-			<div class="col-xs-12">
-
+		<div class="row row-table">
+			<div class="col-xs-12 ">
+				<div id="map"></div>
 			</div>
 		</div>
 	</section>
@@ -71,15 +71,16 @@
 		</div>
 	</section>
 
-
-
-
 	<footer class="container-fluid">
 
 	</footer>
 
-<!-- API key AIzaSyCsmI5iuL3AjwGiUlX8nfm0twnNFzywJg0 -->
-	
+	<!-- API key AIzaSyCsmI5iuL3AjwGiUlX8nfm0twnNFzywJg0 -->
+
+
+	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCsmI5iuL3AjwGiUlX8nfm0twnNFzywJg0&callback=initMap" async defer></script>
+	<script src="assets/js/map.js"></script>
+
 </body>
 
 </html>
