--- a/index2.html
+++ b/index2.html
@@ -29,7 +29,8 @@
 			<a href="#home" class="hvr-sweep-to-bottom">Home</a>
 			<a href="#accomidation" class="hvr-sweep-to-bottom">Accomadation</a>
 			<a href="#food" class="hvr-sweep-to-bottom">Eat and Drink</a>
-			<input id="pac-input" class="controls" type="text" placeholder="Enter your destination!">
+				<input id="pac-input" class="controls" type="text" placeholder="Enter your destination!">
+			
 		</div>
 	</header>
 
@@ -48,7 +49,7 @@
 		<div class="row row-table">
 			<div class="col-xs-12 ">
 				<div id="map"></div>
-				
+			
 			</div>
 		</div>
 	</section>
@@ -89,7 +90,7 @@
 
 	<!-- API key AIzaSyCsmI5iuL3AjwGiUlX8nfm0twnNFzywJg0	-->
 
-	<script src="assets/js/map.js"></script>
+	<script src="assets/js/map2.js"></script>
 
 	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCsmI5iuL3AjwGiUlX8nfm0twnNFzywJg0&libraries=places&callback=initMap" async defer></script>
 
