--- a/index2.html
+++ b/index2.html
@@ -28,9 +28,10 @@
 		<div id="navbar">
 			<a href="#home" class="hvr-sweep-to-bottom">Home</a>
 			<a href="#accomidation" class="hvr-sweep-to-bottom">Accomadation</a>
+			<input type="checkbox" id="accomodation-box">
 			<a href="#food" class="hvr-sweep-to-bottom">Eat and Drink</a>
-				<input id="pac-input" class="controls" type="text" placeholder="Enter your destination!">
-			
+			<input id="pac-input" class="controls" type="text" placeholder="Enter your destination!">
+
 		</div>
 	</header>
 
@@ -49,12 +50,43 @@
 		<div class="row row-table">
 			<div class="col-xs-12 ">
 				<div id="map"></div>
-			
+
 			</div>
 		</div>
 	</section>
 
+	<div id="listing">
+		<table id="resultsTable">
+			<tbody id="results"></tbody>
+		</table>
+	</div>
 
+	<div style="display: none">
+		<div id="info-content">
+			<table>
+				<tr id="iw-url-row" class="iw_table_row">
+					<td id="iw-icon" class="iw_table_icon"></td>
+					<td id="iw-url"></td>
+				</tr>
+				<tr id="iw-address-row" class="iw_table_row">
+					<td class="iw_attribute_name">Address:</td>
+					<td id="iw-address"></td>
+				</tr>
+				<tr id="iw-phone-row" class="iw_table_row">
+					<td class="iw_attribute_name">Telephone:</td>
+					<td id="iw-phone"></td>
+				</tr>
+				<tr id="iw-rating-row" class="iw_table_row">
+					<td class="iw_attribute_name">Rating:</td>
+					<td id="iw-rating"></td>
+				</tr>
+				<tr id="iw-website-row" class="iw_table_row">
+					<td class="iw_attribute_name">Website:</td>
+					<td id="iw-website"></td>
+				</tr>
+			</table>
+		</div>
+	</div>
 
 
 	<!-- accomodation row  -->
@@ -74,9 +106,9 @@
 			</div>
 		</div>
 	</section>
-	
-	
-		<!-- attractions row  -->
+
+
+	<!-- attractions row  -->
 	<section class="container-fluid">
 		<div class="row col-xs-12">
 			<h2> Attractions</h2>
