added additonal check boxes to search for a specifc type of place near a location. added jquery to ensure the user could only select one of the options. also added js code to allowe users to search for the specified check box

--- a/index2.html
+++ b/index2.html
@@ -11,8 +11,12 @@
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" type="text/css" />
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css" />
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.1.1/css/hover-min.css" type="text/css" />
-	<!-- taken from bootstrap and cdnjs -->
 
+	<script src="//code.jquery.com/jquery-1.12.0.min.js"></script>
+	<script src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+
+
+	<!-- taken from bootstrap and cdnjs -->
 	<link rel="stylesheet" href="assets/css/style.css" type="text/css" />
 
 	<!-- taken from google maps api -->
@@ -28,12 +32,20 @@
 		<div id="navbar">
 			<a href="#home" class="hvr-sweep-to-bottom">Home</a>
 			<a href="#accomidation" class="hvr-sweep-to-bottom">Accomadation</a>
-			<input type="checkbox" id="accomodation-box">
+			<!-- <input type="checkbox" id="accomodation-box"> 	used to trial the differnet search-->
 			<a href="#food" class="hvr-sweep-to-bottom">Eat and Drink</a>
 			<input id="pac-input" class="controls" type="text" placeholder="Enter your destination!">
 
 		</div>
 	</header>
+
+
+<div class="">
+	<input type="checkbox" id="accomodation-box"> Accomodation
+	<input type="checkbox" id="bar-box">Bars and Restaurants
+	<input type="checkbox" id="attraction-box">Attractions
+</div>
+
 
 	<section class="container-fluid">
 		<div class="row row-table">
