added the code to make the check box pre populated

--- a/index2.html
+++ b/index2.html
@@ -30,18 +30,13 @@
 
 	<header>
 		<div id="navbar">
-			<a href="#home" class="hvr-sweep-to-bottom">Home</a>
-			<a href="#accomidation" class="hvr-sweep-to-bottom">Accomadation</a>
-			<!-- <input type="checkbox" id="accomodation-box"> 	used to trial the differnet search-->
-			<a href="#food" class="hvr-sweep-to-bottom">Eat and Drink</a>
 			<input id="pac-input" class="controls" type="text" placeholder="Enter your destination!">
-
 		</div>
 	</header>
 
 
 <div class="">
-	<input type="checkbox" id="accomodation-box"> Accomodation
+	<input type="checkbox" checked="checked" id="accomodation-box"> Accomodation
 	<input type="checkbox" id="bar-box">Bars and Restaurants
 	<input type="checkbox" id="attraction-box">Attractions
 </div>
