--- a/index.html
+++ b/index.html
@@ -33,13 +33,177 @@
 		</div>
 	</header>
 
+
 	<section class="container-fluid">
 		<div class="row row-table">
+			<div class="col-xs-12 "><!DOCTYPE html>
+<html lang="en">
+
+<head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta http-equiv="X-UA-Compatible" content="ie=edge">
+	<title>Travel Destination</title>
+
+	<!-- taken from bootstrap and cdnjs -->
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" type="text/css" />
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css" />
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.1.1/css/hover-min.css" type="text/css" />
+
+	<script src="//code.jquery.com/jquery-1.12.0.min.js"></script>
+	<script src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+
+	<!-- taken from bootstrap and cdnjs -->
+	<link rel="stylesheet" href="assets/css/style.css" type="text/css" />
+
+	<!-- taken from google maps api -->
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+	<!-- taken from google maps api -->
+
+</head>
+
+<body>
+
+	<header>
+		<div id="navbar">
+
+		</div>
+	</header>
+
+
+	<section class="container-fluid main-section-column">
+
+		<section class="container-fluid">
+			<div class="row">
+				<div class="col-xs-12 ">
+					<h1> Find your destination</h1>
+				</div>
+			</div>
+		</section>
+
+		<div class="sub-heading row">
 			<div class="col-xs-12 ">
+				<h3> Choose what you are searching for and then start typing your destination</h3>
+			</div>
+		</div>
+
+		<div class="search-bar row">
+			<div class="col-md-6 col-md-offset-3">
+				<input id="pac-input" class="controls" type="text" placeholder="Enter your destination!">
+			</div>
+		</div>
+
+		<div class="checkboxes row">
+			<div class="col-xs-12">
+				<input type="checkbox" checked="checked" id="accomodation-box"> Accomodation
+				<input type="checkbox" id="bar-box">Bars and Restaurants
+				<input type="checkbox" id="attraction-box">Attractions
+			</div>
+		</div>
+
+
+		<!-- google maps row  -->
+		<section class="container-fluid">
+			<div class="row">
+				<div class="col-xs-12 ">
+					<div id="map"></div>
+
+				</div>
+			</div>
+		</section>
+
+		<div id="listing">
+			<table id="resultsTable">
+				<tbody id="results"></tbody>
+			</table>
+		</div>
+
+		<div style="display: none">
+			<div id="info-content">
+				<table>
+					<tr id="iw-url-row" class="iw_table_row">
+						<td id="iw-icon" class="iw_table_icon"></td>
+						<td id="iw-url"></td>
+					</tr>
+					<tr id="iw-address-row" class="iw_table_row">
+						<td class="iw_attribute_name">Address:</td>
+						<td id="iw-address"></td>
+					</tr>
+					<tr id="iw-phone-row" class="iw_table_row">
+						<td class="iw_attribute_name">Telephone:</td>
+						<td id="iw-phone"></td>
+					</tr>
+					<tr id="iw-rating-row" class="iw_table_row">
+						<td class="iw_attribute_name">Rating:</td>
+						<td id="iw-rating"></td>
+					</tr>
+					<tr id="iw-website-row" class="iw_table_row">
+						<td class="iw_attribute_name">Website:</td>
+						<td id="iw-website"></td>
+					</tr>
+				</table>
+			</div>
+		</div>
+
+
+		<!-- accomodation row  -
+	<section class="container-fluid">
+		<div class="row">
+			<div class="col-xs-12">
+				<h2> Accomodation</h2>
+			</div>
+		</div>
+	</section>
+
+	<!-- food row  
+	<section class="container-fluid">
+		<div class="row">
+			<div class="col-xs-12">
+				<h2> Food and Drink</h2>
+			</div>
+		</div>
+	</section>
+
+
+	<!-- attractions row  
+	<section class="container-fluid">
+		<div class="row col-xs-12">
+			<h2> Attractions</h2>
+		</div>
+		</div>
+	</section>
+-->
+	</section>
+	<footer class="container-fluid footer">
+<div class="">
+	<p> This website was created with the use of the google maps API documentation 
+	in order to allow users to search for hotels, bars and restaurants and 
+	attactions within a radius of the search locaiton</p>
+</div>
+	</footer>
+
+	<!-- API key AIzaSyCsmI5iuL3AjwGiUlX8nfm0twnNFzywJg0	-->
+
+	<script src="assets/js/map2.js"></script>
+
+	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCsmI5iuL3AjwGiUlX8nfm0twnNFzywJg0&libraries=places&callback=initMap" async defer></script>
+
+
+</body>
+
+</html>
+
 				<h1> Find your destination</h1>
 			</div>
 		</div>
 	</section>
+
+
+<select id="js-aos-dropdown">
+  <option id="accomodation-box">Accomodation</option>
+  <option id="bar-box">>Bars and Restaurants</option>
+   <option id="attraction-box">Attractions</option>
+</select>
 
 
 
@@ -52,6 +216,7 @@
 			</div>
 		</div>
 	</section>
+
 
 
 
