re worked the sticky nav bar to be more appropriate and completed general tidying of code across all pages, made the nav bar stay above all content by using z index

--- a/index2.html
+++ b/index2.html
@@ -28,6 +28,8 @@
 
 	<header>
 		<div id="navbar">
+			<a href="#home">Head back to the search bar</a>
+			<a href="#results">Check your results</a>
 
 		</div>
 	</header>
@@ -137,11 +139,9 @@
 -->
 	</section>
 	<footer class="container-fluid footer">
-<div class="">
-	<p> This website was created with the use of the google maps API documentation 
-	in order to allow users to search for hotels, bars and restaurants and 
-	attactions within a radius of the search locaiton</p>
-</div>
+		<div class="">
+			<p> This website was created with the use of the google maps API documentation in order to allow users to search for hotels, bars and restaurants and attactions within a radius of the search locaiton</p>
+		</div>
 	</footer>
 
 	<!-- API key AIzaSyCsmI5iuL3AjwGiUlX8nfm0twnNFzywJg0	-->
