added the ability of the nav bar to take the user to the top of the page to the search bar or to the results

--- a/index2.html
+++ b/index2.html
@@ -28,7 +28,7 @@
 
 	<header>
 		<div id="navbar">
-			<a href="#home">Head back to the search bar</a>
+			<a href="#search">Head back to the search bar</a>
 			<a href="#results">Check your results</a>
 
 		</div>
@@ -38,8 +38,8 @@
 	<section class="container-fluid main-section-column">
 
 		<section class="container-fluid">
-			<div class="row">
-				<div class="col-xs-12 ">
+			<div class="row" id ="search">
+				<div class="col-xs-12">
 					<h1> Find your destination</h1>
 				</div>
 			</div>
