--- a/index2.html
+++ b/index2.html
@@ -35,108 +35,54 @@
 	</header>
 
 
-	<section class="container-fluid main-section-column">
-
-		<section class="container-fluid">
-			<div class="row" id ="search">
-				<div class="col-xs-12">
-					<h1> Find your destination</h1>
+	<section class="container-fluid section-column">
+		<section class="col-xs-12">
+			<section class="container-fluid">
+				<div class="row" id="search">
+					<div class="col-xs-12">
+						<h1> Find your destination</h1>
+					</div>
 				</div>
-			</div>
-		</section>
+			</section>
 
-		<div class="sub-heading row">
-			<div class="col-xs-12 ">
-				<h3> Choose what you are searching for and then start typing your destination</h3>
-			</div>
-		</div>
-
-		<div class="search-bar row">
-			<div class="col-md-6 col-md-offset-3">
-				<input id="pac-input" class="controls" type="text" placeholder="Enter your destination!">
-			</div>
-		</div>
-
-		<div class="checkboxes row">
-			<div class="col-xs-12">
-				<input type="checkbox" checked="checked" id="accomodation-box"> Accomodation
-				<input type="checkbox" id="bar-box">Bars and Restaurants
-				<input type="checkbox" id="attraction-box">Attractions
-			</div>
-		</div>
-
-
-		<!-- google maps row  -->
-		<section class="container-fluid">
-			<div class="row">
+			<div class="sub-heading row">
 				<div class="col-xs-12 ">
-					<div id="map"></div>
-
+					<h3> Choose what you are searching for and then start typing your destination</h3>
 				</div>
 			</div>
+
+			<div class="search-bar row">
+				<div class="col-xs-12">
+					<input id="pac-input" class="controls" type="text" placeholder="Enter your destination!">
+				</div>
+			</div>
+
+			<div class="checkboxes row">
+				<div class="col-xs-12">
+					<input type="checkbox" checked="checked" id="accomodation-box"> Accomodation
+					<input type="checkbox" id="bar-box">Bars and Restaurants
+					<input type="checkbox" id="attraction-box">Attractions
+				</div>
+			</div>
+
+
+			<!-- google maps row  -->
+			<section class="container-fluid">
+				<div class="row">
+					<div class="col-xs-12 ">
+						<div id="map"></div>
+
+					</div>
+				</div>
+			</section>
+
+			<div id="listing" class="col-xs-12">
+				<table id="resultsTable">
+					<tbody id="results"></tbody>
+				</table>
+			</div>
+
 		</section>
-
-		<div id="listing">
-			<table id="resultsTable">
-				<tbody id="results"></tbody>
-			</table>
-		</div>
-
-		<!--<div style="display: none">-->
-		<!--	<div id="info-content">-->
-		<!--		<table>-->
-		<!--			<tr id="iw-url-row" class="iw_table_row">-->
-		<!--				<td id="iw-icon" class="iw_table_icon"></td>-->
-		<!--				<td id="iw-url"></td>-->
-		<!--			</tr>-->
-		<!--			<tr id="iw-address-row" class="iw_table_row">-->
-		<!--				<td class="iw_attribute_name">Address:</td>-->
-		<!--				<td id="iw-address"></td>-->
-		<!--			</tr>-->
-		<!--			<tr id="iw-phone-row" class="iw_table_row">-->
-		<!--				<td class="iw_attribute_name">Telephone:</td>-->
-		<!--				<td id="iw-phone"></td>-->
-		<!--			</tr>-->
-		<!--			<tr id="iw-rating-row" class="iw_table_row">-->
-		<!--				<td class="iw_attribute_name">Rating:</td>-->
-		<!--				<td id="iw-rating"></td>-->
-		<!--			</tr>-->
-		<!--			<tr id="iw-website-row" class="iw_table_row">-->
-		<!--				<td class="iw_attribute_name">Website:</td>-->
-		<!--				<td id="iw-website"></td>-->
-		<!--			</tr>-->
-		<!--		</table>-->
-		<!--	</div>-->
-		<!--</div> -->
-
-
-		<!-- accomodation row  -
-	<section class="container-fluid">
-		<div class="row">
-			<div class="col-xs-12">
-				<h2> Accomodation</h2>
-			</div>
-		</div>
-	</section>
-
-	<!-- food row  
-	<section class="container-fluid">
-		<div class="row">
-			<div class="col-xs-12">
-				<h2> Food and Drink</h2>
-			</div>
-		</div>
-	</section>
-
-
-	<!-- attractions row  
-	<section class="container-fluid">
-		<div class="row col-xs-12">
-			<h2> Attractions</h2>
-		</div>
-		</div>
-	</section>
--->
 	</section>
 	<footer class="container-fluid footer">
 		<div class="">
