made minor amendments on js file, styled the index page with css

--- a/index2.html
+++ b/index2.html
@@ -45,25 +45,28 @@
 				</div>
 			</section>
 
-			<div class="sub-heading row">
-				<div class="col-xs-12 ">
-					<h3> Choose what you are searching for and then start typing your destination</h3>
+			<section class="search_section">
+				<div class="sub-heading row">
+					<div class="col-xs-12 ">
+						<h3> Choose what you are searching for and then start typing your destination</h3>
+					</div>
 				</div>
-			</div>
 
-			<div class="search-bar row">
-				<div class="col-xs-12">
-					<input id="pac-input" class="controls" type="text" placeholder="Enter your destination!">
+				<div class="search-bar row">
+					<div class="col-xs-12">
+						<input id="pac-input" class="controls" type="text" placeholder="Enter your destination!">
+					</div>
 				</div>
-			</div>
 
-			<div class="checkboxes row">
-				<div class="col-xs-12">
-					<input type="checkbox" checked="checked" id="accomodation-box"> Accomodation
-					<input type="checkbox" id="bar-box">Bars and Restaurants
-					<input type="checkbox" id="attraction-box">Attractions
+				<div class="checkboxes row">
+					
+					<div class="col-xs-12 col-md-3">	<input type="checkbox" checked="checked" id="accomodation-box"> Accomodation</div>
+					<div class="col-xs-12 col-md-3"><input type="checkbox" id="bar-box">Bars and Restaurants</div>
+					<div class="col-xs-12 col-md-3"><input type="checkbox" id="attraction-box">Attractions</div>
+
 				</div>
-			</div>
+			</section>
+
 
 
 			<!-- google maps row  -->
