made changes to the styling of hte page and tidyd up unncessary code. added images to assess ideas for lay out and to assess whther it adds more to the website

--- a/index2.html
+++ b/index2.html
@@ -40,7 +40,7 @@
 			<section class="container-fluid">
 				<div class="row" id="search">
 					<div class="col-xs-12">
-						<h1> Find your destination</h1>
+						<h1> Find your next destination!</h1>
 					</div>
 				</div>
 			</section>
@@ -48,7 +48,7 @@
 			<section class="search_section">
 				<div class="sub-heading row">
 					<div class="col-xs-12 ">
-						<h3> Choose what you are searching for and then start typing your destination</h3>
+						<h3> Choose what you are searching for and then start typing your destination!</h3>
 					</div>
 				</div>
 
@@ -59,13 +59,18 @@
 				</div>
 
 				<div class="checkboxes row">
-					
-					<div class="col-xs-12 col-md-3">	<input type="checkbox" checked="checked" id="accomodation-box"> Accomodation</div>
+
+					<div class="col-xs-12 col-md-3"> <input type="checkbox" checked="checked" id="accomodation-box"> Accomodation</div>
 					<div class="col-xs-12 col-md-3"><input type="checkbox" id="bar-box">Bars and Restaurants</div>
 					<div class="col-xs-12 col-md-3"><input type="checkbox" id="attraction-box">Attractions</div>
-
 				</div>
+
 			</section>
+			<div class="sub-heading row">
+				<div class="col-xs-12 ">
+					<h3> Once you search check out the results below!</h3>
+				</div>
+			</div>
 
 
 
@@ -78,6 +83,7 @@
 					</div>
 				</div>
 			</section>
+
 
 			<div id="listing" class="col-xs-12">
 				<table id="resultsTable">
