added the readme file and deleted extra files that were unnecessary and part of the testing of building the website. Also uploaded the mockups from wireframe  to show intial planning pahse

--- a/index2.html
+++ b/index2.html
@@ -58,13 +58,14 @@
 					</div>
 				</div>
 
-				<div class="checkboxes row">
+				<div class="checkboxes row" id="checkboxes">
 
-					<div class="col-xs-12 col-md-3"> <input type="checkbox" checked="checked" id="accomodation-box"> Accomodation</div>
-					<div class="col-xs-12 col-md-3"><input type="checkbox" id="bar-box">Bars and Restaurants</div>
-					<div class="col-xs-12 col-md-3"><input type="checkbox" id="attraction-box">Attractions</div>
+					<div class="col-xs-12 col-md-3"> <input type="checkbox" checked="checked"  id="accomodation-box"> Accomodation</div>
+					<div class="col-xs-12 col-md-3"><input type="checkbox"  id="bar-box">Bars and Restaurants</div>
+					<div class="col-xs-12 col-md-3"><input type="checkbox"  id="attraction-box">Attractions</div>
 				</div>
 
+ 
 			</section>
 			<div class="sub-heading row">
 				<div class="col-xs-12 ">
