generaly tidying of code and added feature to map2.js to stop users being able to deselect checkboxes to ensure at there is always one checkbox selected

--- a/index2.html
+++ b/index2.html
@@ -60,9 +60,9 @@
 
 				<div class="checkboxes row" id="checkboxes">
 
-					<div class="col-xs-12 col-md-3"> <input type="checkbox" checked="checked"  id="accomodation-box"> Accomodation</div>
-					<div class="col-xs-12 col-md-3"><input type="checkbox"  id="bar-box">Bars and Restaurants</div>
-					<div class="col-xs-12 col-md-3"><input type="checkbox"  id="attraction-box">Attractions</div>
+					<div class="col-xs-12 col-md-3"> <input type="checkbox" class="tick" checked="checked"  id="accomodation-box"> Accomodation</div>
+					<div class="col-xs-12 col-md-3"><input type="checkbox" class="tick" id="bar-box">Bars and Restaurants</div>
+					<div class="col-xs-12 col-md-3"><input type="checkbox" class="tick"  id="attraction-box">Attractions</div>
 				</div>
 
  
