minor tweeks to tidy code and amend errors

--- a/index2.html
+++ b/index2.html
@@ -60,12 +60,12 @@
 
 				<div class="checkboxes row" id="checkboxes">
 
-					<div class="col-xs-12 col-md-3"> <input type="checkbox" class="tick" checked="checked"  id="accomodation-box"> Accomodation</div>
+					<div class="col-xs-12 col-md-3"> <input type="checkbox" class="tick" checked="checked" id="accomodation-box"> Accommodation</div>
 					<div class="col-xs-12 col-md-3"><input type="checkbox" class="tick" id="bar-box">Bars and Restaurants</div>
-					<div class="col-xs-12 col-md-3"><input type="checkbox" class="tick"  id="attraction-box">Attractions</div>
+					<div class="col-xs-12 col-md-3"><input type="checkbox" class="tick" id="attraction-box">Attractions</div>
 				</div>
 
- 
+
 			</section>
 			<div class="sub-heading row">
 				<div class="col-xs-12 ">
@@ -95,7 +95,7 @@
 		</section>
 	</section>
 	<footer class="container-fluid footer">
-		<div class="">
+		<div>
 			<p> This website was created with the use of the google maps API documentation in order to allow users to search for hotels, bars and restaurants and attactions within a radius of the search locaiton</p>
 		</div>
 	</footer>
