ensured the hover sweep to bottom was working, and also added in a new <p>  tag to prompt users to retype thier destinaiton for each search rather than  just press enter. also added to known bugs section of Readme

--- a/index2.html
+++ b/index2.html
@@ -28,8 +28,8 @@
 
 	<header>
 		<div id="navbar">
-			<a href="#search">Head back to the search bar</a>
-			<a href="#results">Check your results</a>
+			<a href="#search"class="hvr-sweep-to-bottom">Head back to the search bar</a>
+			<a href="#results"class="hvr-sweep-to-bottom">Check your results</a>
 
 		</div>
 	</header>
@@ -64,6 +64,13 @@
 					<div class="col-xs-12 col-md-3"><input type="checkbox" class="tick" id="bar-box">Bars and Restaurants</div>
 					<div class="col-xs-12 col-md-3"><input type="checkbox" class="tick" id="attraction-box">Attractions</div>
 				</div>
+				
+				<div class="sub-heading row ">
+					<div class="col-xs-12 ">
+						<p>When your ready to search for something differnt make sure to type out the new destination </p>
+					</div>
+				</div>
+				
 
 
 			</section>
